<resources>
    <string name="app_name">Gallery</string>
    <string name="all_folders">All folders</string>
    <!--
    <string name="error_loading_folders_1">Error, could not load directories</string>
    <string name="error_loading_folders_2">App will be closed, coz its useless now</string>
    -->

    <!-- directory menu strings-->
    <string name="sort">Sort</string>
    <string name="name_ascending">By name: (a->z)</string>
    <string name="name_descending">By name: (z->a)</string>
    <string name="size_ascending">To biggest</string>
    <string name="size_descending">To smallest</string>
    <string name="view_all_images">View all images</string>
    <string name="settings">Settings</string>
    <string name="scan_for_similar">Scan for similar</string>
    <string name="change_name">Change Name</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete">Delete</string>

    <!-- settings strings-->
    <string name="graphics">Graphics</string>
    <string name="dir_columns">Columns Number (Folders): </string>
    <string name="images_columns">Columns Number (Images): </string>
    <string name="media_editing">Image editing</string>
    <string name="rotation_with_gestures">Rotate images with gestures?</string>
    <string name="additional_options">Additional Options</string>
    <string name="delete_after_emptying">Delete empty folders?</string>
    <string name="move_to_bin">Move to bin before deleting?</string>
    <string name="time_before_deleting">Time before automatically deleting images (days)</string>

    <string name="dir_column_number_hint">Folder columns</string>
    <string name="img_column_number_hint">Media columns</string>
    <string name="days_before_deleting_hint">Only numbers</string>

    <string name="edit_colors">Edit colors</string>

    <string name="matching_percentage">Matching percentage</string>
    <string name="comparing_options">Comparing options</string>
    <string name="comparing_percentage">Comparing percentage</string>
    <string name="perfect_match_note"> \"Perfect Match\" - when disabled \"Pixel comparing
        percentage\" and \"Matching percentage\" will be taken into account \n \"Pixel comparing
        percentage\" - \"Percentage\" pixel amount to compare \n \"Matching percentage\" -
        \"Percentage\" pixel amount that is the same in both pictures to treat as similar picture
    </string>
    <string name="percentage_hint" translatable="false">1–100</string>
    <string name="perfect_match">Perfect Match</string>

    <string name="confirm">Confirm</string>

    <!-- graphics screen -->
    <string name="graphics_screen">Graphics Screen</string>
    <string name="theme">Themes:</string>
    <string-array name="themes">
        <item>Day</item>
        <item>Night</item>
        <item>Custom</item>
    </string-array>
    <string-array name="colors">
        <item name="white">white</item>
        <item name="yellow">yellow</item>
        <item name="fuchsia">fuchsia</item>
        <item name="red">red</item>
        <item name="silver">silver</item>
        <item name="gray">gray</item>
        <item name="olive">olive</item>
        <item name="purple">purple</item>
        <item name="maroon">maroon</item>
        <item name="aqua">aqua</item>
        <item name="lime">lime</item>
        <item name="teal">teal</item>
        <item name="green">green</item>
        <item name="blue">blue</item>
        <item name="navy">navy</item>
        <item name="black">black</item>
    </string-array>
    <string name="text_color">Text color</string>
    <string name="background_color">Background Color</string>
    <string name="statusBar_color">Status bar Color</string>
    <string name="actionbar_color">Action bar Color</string>
    <string name="navigationBar_color">Navigation bar Color</string>

    <!-- directory content menu strings -->
    <string name="date_ascending">To oldest</string>
    <string name="date_descending">To newest</string>
    <string name="no_similar_images">"No similar Images found ;)"</string>
    <string name="move">Move</string>
    <string name="all_media_deleted">All media deleted</string>
    <string name="all_media_deleted_dir_empty_but_wont_show">All media deleted but empty dir wont show anymore</string>
    <string name="select_folder">Select folder to move files</string>

    <!-- all media screen -->
    <string name="all_images">All images</string>
    <string name="view_all_directories">Show all folders</string>

    <!-- similar screen -->
    <string name="similar">Similar Images</string>

    <!-- single media screen -->
    <string name="basic_media_info">Display basic media info</string>
    <string name="rename">Rename</string>
    <string name="media_name">Media name:</string>
    <string name="media_path">Media path:</string>
    <string name="media_size">Media size:</string>
    <string name="media_dimensions">Media dimensions:</string>
    <string name="media_date">Media date:</string>
    <string name="media_length">Media length:</string>

    <!-- error -->
    <string name="error_all_media">Error loading media</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>