<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dir_delete_button"
        android:icon="@mipmap/icon_trash_foreground"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:onClick="menuDeleteDirectories"/>
    <!-- <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" /> -->
    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/menu_sort_name_asc"
                android:title="@string/name_ascending"
                android:onClick="menuSortNameAscFunc"/>
            <item
                android:id="@+id/menu_sort_name_desc"
                android:title="@string/name_descending"
                android:onClick="menuSortNameDescFunc"/> <!--name_sort-->
            <item
                android:id="@+id/menu_sort_size_asc"
                android:title="@string/size_ascending"
                android:onClick="menuSortSizeAscFunc"/>
            <item
                android:id="@+id/menu_sort_size_desc"
                android:title="@string/size_descending"
                android:onClick="menuSortSizeDescFunc"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_rename_dir"
        android:title="@string/change_name"
        android:visible="false"
        android:onClick="menuChangeDirName"/>
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all"
        android:onClick="selectAll"/>
    <item
        android:id="@+id/menu_deselect_all"
        android:visible="false"
        android:title="@string/deselect_all"
        android:onClick="deselectAll"/>
    <item
        android:id="@+id/menu_show_images"
        android:title="@string/view_all_images"
        android:onClick="menuStartAllMediaActivity"/>
    <item
        android:id="@+id/menu_open_settings"
        android:title="@string/settings"
        android:onClick="menuLaunchSettingsActivity"/>


</menu>