<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_basic_media_info"
        android:title="@string/basic_media_info"
        android:onClick="menuDisplayMediaInfo"/>
    <item
        android:id="@+id/menu_rename_file"
        android:title="@string/rename"
        android:onClick="menuRenameMedia"/>
    <item
        android:id="@+id/menu_move_media"
        android:title="@string/move"
        android:onClick="menuMoveMedia" />
    <item
        android:id="@+id/menu_delete_file"
        android:title="@string/delete"
        android:onClick="menuDeleteMedia"/>
    <item
        android:id="@+id/menu_open_settings"
        android:title="@string/settings"
        android:onClick="menuLaunchSettingsActivity"/>

</menu>