<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_similarMedia_delete_button"
        android:icon="@mipmap/icon_trash_foreground"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:onClick="menuDeleteMedia"/>
    <!--<item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_title"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom" /> -->
    <item
        android:id="@+id/menu_deselect_all"
        android:visible="false"
        android:title="@string/deselect_all"
        android:onClick="menuDeselectAll"/>
    <item
        android:id="@+id/menu_open_settings"
        android:title="@string/settings"
        android:onClick="menuLaunchSettingsActivity"/>

</menu>