<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Screen.SettingsScreen">

        <TextView
            android:id="@+id/static_text_graphics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/graphics"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/static_text_dir_columns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/dir_columns"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_graphics" />

        <EditText
            android:id="@+id/insert_dir_columns_number"
            android:layout_width="100sp"
            android:layout_height="36sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:ems="5"
            android:hint="@string/dir_column_number_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_dir_columns"
            app:layout_constraintTop_toBottomOf="@+id/static_text_graphics" />
        <TextView
            android:id="@+id/static_text_images_columns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/images_columns"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_dir_columns" />

        <EditText
            android:id="@+id/insert_img_columns_number"
            android:layout_width="100sp"
            android:layout_height="36sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:ems="5"
            android:hint="@string/img_column_number_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_images_columns"
            app:layout_constraintTop_toBottomOf="@+id/static_text_dir_columns" />
        <Button
            android:id="@+id/button_edit_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:onClick="openColorMenu"
            android:text="@string/edit_colors"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_images_columns" />
        <TextView
            android:id="@+id/static_text_media_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12sp"
            android:text="@string/media_editing"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_edit_colors" />
        <TextView
            android:id="@+id/static_text_rotation_with_gestures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/rotation_with_gestures"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_media_editing" />

        <CheckBox
            android:id="@+id/box_rotate_with_gestures"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_rotation_with_gestures"
            app:layout_constraintTop_toBottomOf="@+id/static_text_media_editing" />
        <TextView
            android:id="@+id/static_text_additional_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:text="@string/additional_options"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_rotation_with_gestures" />
        <TextView
            android:id="@+id/static_text_delete_after_emptying"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/delete_after_emptying"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_additional_options" />

        <CheckBox
            android:id="@+id/box_delete_after_emptying"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_delete_after_emptying"
            app:layout_constraintTop_toBottomOf="@+id/static_text_additional_options" />
        <TextView
            android:id="@+id/static_text_move_to_bin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/move_to_bin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_delete_after_emptying" />

        <CheckBox
            android:id="@+id/box_move_to_bin_before_deleting"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_move_to_bin"
            app:layout_constraintTop_toBottomOf="@+id/static_text_delete_after_emptying" />

        <TextView
            android:id="@+id/static_text_time_before_deleting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="150dp"
            android:text="@string/time_before_deleting"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_move_to_bin" />
        <EditText
            android:id="@+id/insert_days_before_deleting"
            android:layout_width="100sp"
            android:layout_height="46sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:ems="10"
            android:hint="@string/days_before_deleting_hint"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_time_before_deleting"
            app:layout_constraintTop_toBottomOf="@+id/static_text_move_to_bin"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/static_text_comparing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:text="@string/comparing_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_time_before_deleting" />

        <TextView
            android:id="@+id/static_text_perfect_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:text="@string/perfect_match"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_comparing" />

        <CheckBox
            android:id="@+id/box_perfect_match"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/static_text_perfect_match"
            app:layout_constraintTop_toBottomOf="@+id/static_text_comparing" />

        <TextView
            android:id="@+id/static_text_matching_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:text="@string/matching_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_perfect_match" />

        <EditText
            android:id="@+id/insert_matching_percentage"
            android:layout_width="wrap_content"
            android:layout_height="36sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:ems="5"
            android:hint="@string/percentage_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_matching_percentage"
            app:layout_constraintTop_toBottomOf="@+id/static_text_perfect_match" />

        <TextView
            android:id="@+id/static_text_comparison_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:text="@string/comparing_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_matching_percentage" />

        <EditText
            android:id="@+id/insert_comparison_percentage"
            android:layout_width="wrap_content"
            android:layout_height="36sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12sp"
            android:ems="5"
            android:hint="@string/percentage_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/static_text_matching_percentage"
            app:layout_constraintTop_toBottomOf="@+id/static_text_matching_percentage" />


        <Button
            android:id="@+id/confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="changeParameters"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/static_text_comparison_percentage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/perfect_match_note"
            android:layout_marginTop="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>