<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/static_text_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/theme"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/themes_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/themes"
        app:layout_constraintTop_toTopOf="@+id/static_text_theme"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_theme"
        app:layout_constraintStart_toEndOf="@+id/static_text_theme"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/static_text_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_theme" />

    <Spinner
        android:id="@+id/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        app:layout_constraintTop_toTopOf="@+id/static_text_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_text_color"
        app:layout_constraintStart_toEndOf="@+id/static_text_text_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/static_text_bg_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_text_color" />

    <Spinner
        android:id="@+id/bg_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        app:layout_constraintTop_toTopOf="@+id/static_text_bg_color"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_bg_color"
        app:layout_constraintStart_toEndOf="@+id/static_text_bg_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/static_text_statusBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/statusBar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_bg_color" />

    <Spinner
        android:id="@+id/statusBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        app:layout_constraintTop_toTopOf="@+id/static_text_statusBar_color"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_statusBar_color"
        app:layout_constraintStart_toEndOf="@+id/static_text_statusBar_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/static_text_actionBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/actionbar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_statusBar_color" />

    <Spinner
        android:id="@+id/actionBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        app:layout_constraintTop_toTopOf="@+id/static_text_actionBar_color"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_actionBar_color"
        app:layout_constraintStart_toEndOf="@+id/static_text_actionBar_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/static_text_navigationBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/navigationBar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_actionBar_color" />

    <Spinner
        android:id="@+id/navigationBar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        app:layout_constraintTop_toTopOf="@+id/static_text_navigationBar_color"
        app:layout_constraintBottom_toBottomOf="@+id/static_text_navigationBar_color"
        app:layout_constraintStart_toEndOf="@+id/static_text_navigationBar_color"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>